<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ua_notification_button_accept">Accept</string>
    <string name="ua_notification_button_buy_now">Buy Now</string>
    <string name="ua_notification_button_decline">Decline</string>
    <string name="ua_notification_button_dislike">Dislike</string>
    <string name="ua_notification_button_download">Download</string>
    <string name="ua_notification_button_follow">Follow</string>
    <string name="ua_notification_button_less_like">Less Like This</string>
    <string name="ua_notification_button_like">Like</string>
    <string name="ua_notification_button_more_like">More Like This</string>
    <string name="ua_notification_button_no">No</string>
    <string name="ua_notification_button_opt_in">Opt-in</string>
    <string name="ua_notification_button_opt_out">Opt-out</string>
    <string name="ua_notification_button_remind">Remind Me Later</string>
    <string name="ua_notification_button_share">Share</string>
    <string name="ua_notification_button_shop_now">Shop Now</string>
    <string name="ua_notification_button_unfollow">Unfollow</string>
    <string name="ua_notification_button_yes">Yes</string>
    <string name="ua_share_dialog_title">Share</string>
    <string name="AppSecret">AppSecret</string>
    <string name="Debug_URL">Debug URL</string>
    <string name="Flush_Response_Cache">Flush Response Cache</string>
    <string name="M">M</string>
    <string name="M2">M</string>
    <string name="OK">OK</string>
    <string name="Show_Analytics_Events">Show Analytics Events</string>
    <string name="Use_Response_Cache">Use Response Cache</string>
    <string name="abType">A</string>
    <string name="abtype_label">AbType</string>
    <string name="accept">Accept</string>
    <string name="add_show_calendar">Add to Calendar</string>
    <string name="add_show_mycbs">Add to My CBS</string>
    <string name="birthdate">Birthdate</string>
    <string name="btn_at">\@</string>
    <string name="btn_hash">\#</string>
    <string name="cast_tw_handle">\@Cast</string>
    <string name="comments_btn_post">Post Comment</string>
    <string name="comments_newest">Newest</string>
    <string name="comments_oldest">Oldest</string>
    <string name="concurrency_msg_video_phone">"You've reached the maximum number of video streams for your account. To view this video, close one of the videos you are watching on any device and try again."</string>
    <string name="concurrency_title">Error- Too Many Streams</string>
    <string name="confirmEmailHint">Confirm Email</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="contentDescription">Default image description</string>
    <string name="default_mycbs">My CBS Gives you easy access to the latest episodes of your favorite CBS shows, all in one place. Sign in or sign up for FREE!</string>
    <string name="dont_have_an_account">"Don't Have An Account? Create One For FREE!"</string>
    <string name="emailHint">Email</string>
    <string name="email_show">Email this show</string>
    <string name="fbtest">FB Test</string>
    <string name="firstNameHint">First Name</string>
    <string name="follow_show_tw">Follow us on Twitter</string>
    <string name="forgot_password2">Forgot Password?</string>
    <string name="gender">Gender</string>
    <string name="lastNameHint">Last Name</string>
    <string name="like_show_fb">Like us on Facebook</string>
    <string name="liveFyreTest">Live Fyre Test</string>
    <string name="nielsen_mgs">By using this CBS Application, you agree to our:</string>
    <string name="nielsen_mobile_user_agreement">" "<u>Mobile User Agreement</u>" "</string>
    <string name="nielsen_privacy_policy">" "<u>Privacy Policy</u>" "</string>
    <string name="nielsen_terms_of_use">" "<u>Terms of Use</u>" "</string>
    <string name="nielsen_video_services">" "<u>Video Services</u>" "</string>
    <string name="passwordHint">Password</string>
    <string name="share_app_email">Email CBS App</string>
    <string name="share_app_fb">Share CBS App on Facebook</string>
    <string name="share_app_text">Text CBS App</string>
    <string name="share_app_tw">Share CBS App on Twitter</string>
    <string name="share_episode">Share Episode</string>
    <string name="share_this_photo_on_email">Email this photo</string>
    <string name="share_this_photo_on_facebook">Share this photo on Facebook</string>
    <string name="share_this_photo_on_twitter">Share this photo on Twitter</string>
    <string name="share_tweet">Tweet</string>
    <string name="sign_in2">Sign In</string>
    <string name="sign_up2">Sign Up</string>
    <string name="state">State</string>
    <string name="tw_char_limit">140</string>
    <string name="twtest">TW Test</string>
    <string name="vertical_bar">|</string>
    <string name="with_email2">With Email</string>
    <string name="with_social">With Social Account</string>
    <string name="zip_code">Zip Code</string>
</resources>