<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@color/soft_grey" android:layout_width="@dimen/phone_dialog_width" android:layout_height="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/phone_dialog_titlebar" />
    <LinearLayout style="@style/PhoneDialogBody">
        <Button android:id="@id/fb_share" android:paddingLeft="30.0dip" android:text="@string/share_app_fb" style="@style/PhoneDialogBodyButtonFacebook" />
        <Button android:id="@id/tw_share" android:paddingLeft="30.0dip" android:text="@string/share_app_tw" style="@style/PhoneDialogBodyButtonTwitter" />
        <Button android:id="@id/email_share" android:paddingLeft="30.0dip" android:text="@string/share_app_email" style="@style/PhoneDialogBodyButtonEmail" />
        <Button android:id="@id/text_share" android:paddingLeft="30.0dip" android:text="@string/share_app_text" style="@style/PhoneDialogBodyButtonText" />
    </LinearLayout>
</RelativeLayout>