<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@color/soft_grey" android:layout_width="500.0dip" android:layout_height="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/titlebar" android:background="@color/dark_grey" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="2.0dip">
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/txt_show_title" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/share_episode" android:layout_weight="8.0" android:textIsSelectable="true" />
        <TextView android:textSize="25.0sp" android:textColor="#ff7f7d75" android:layout_width="4.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/vertical_bar" />
        <Button android:id="@id/dialogButtonClose" android:background="@drawable/btn_close" android:layout_width="52.0dip" android:layout_height="17.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" />
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="left" android:id="@id/castThumb" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" android:src="@drawable/placeholder_320x180" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:contentDescription="@string/contentDescription" />
        <TextView android:id="@id/cast_tw_handle" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/cast_tw_handle" android:layout_toRightOf="@id/castThumb" android:textIsSelectable="false" />
        <EditText android:gravity="center|left|top" android:layout_gravity="center_horizontal" android:id="@id/tw_text" android:background="@color/white" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:lines="4" android:singleLine="false" android:layout_below="@id/castThumb" android:inputType="textMultiLine" />
        <TextView android:id="@id/tv_char" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="5.0dip" android:text="@string/tw_char_limit" android:layout_below="@id/tw_text" android:textIsSelectable="false" />
        <Button android:textColor="@color/dark_grey" android:id="@id/btn_hash" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="5.0dip" android:text="@string/btn_at" android:layout_toRightOf="@id/tv_char" android:layout_below="@id/tw_text" />
        <Button android:textColor="@color/dark_grey" android:id="@id/btn_at" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="5.0dip" android:text="@string/btn_hash" android:layout_toRightOf="@id/btn_hash" android:layout_below="@id/tw_text" />
        <Button android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/dark_grey" android:gravity="center|left" android:id="@id/tw_share" android:paddingLeft="50.0dip" android:layout_width="200.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/share_tweet" android:drawableLeft="@drawable/btn_icon_tw" android:drawablePadding="15.0dip" android:layout_below="@id/tw_text" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>